--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-
-    <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenzo Suda - ゴミ箱</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- Meta Pixel Code -->
     <script>
@@ -60,43 +49,7 @@
                 YouTube Music
             </a>
             <a href="https://lin.ee/tAaaty5" class="btn line-music" target="_blank" data-platform="LINE MUSIC">
-                <img src="https://img.icons8.com/color/48/line-music.png" alt="LINE MUSIC icon">
-                LINE MUSIC
-            </a>
-            <a href="https://amazon.co.jp/music/player/tracks/B0F93FWC4G?marketplaceId=A1VC38T7YXB528&musicTerritory=JP&ref=dm_sh_DxamNXlYOFbZuxtFtDxgscpTk" class="btn amazon-music" target="_blank" data-platform="Amazon Music">
-                <img src="https://img.icons8.com/color/48/amazon-music.png" alt="Amazon Music icon">
-                Amazon Music
-            </a>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
-  
-</head>
-<body>
-    <div class="container">
-        <div class="album-art">
-            <img src="photo-output (1).png" alt="ゴミ箱 - Kenzo Suda Album Art">
-        </div>
-        <h1 class="song-title">ゴミ箱</h1>
-        <p class="artist-name">Kenzo Suda</p>
-
-        <div class="links">
-            <a href="https://open.spotify.com/intl-ja/track/6mY8cYn30qtRzSympHLKTn?si=1ec63cb4c10f44aa" class="btn spotify" target="_blank" data-platform="Spotify">
-                <img src="https://img.icons8.com/color/48/spotify.png" alt="Spotify icon">
-                Spotify
-            </a>
-            <a href="https://music.apple.com/jp/song/%E3%82%B4%E3%83%9F%E7%AE%B1/1815186751" class="btn apple-music" target="_blank" data-platform="Apple Music">
-                <img src="https://img.icons8.com/ios-filled/50/apple-music.png" alt="Apple Music icon">
-                Apple Music
-            </a>
-            <a href="https://music.youtube.com/watch?v=zhc0Sl3l6a4&si=Cho6NfwFE6Hhn0o-" class="btn youtube-music" target="_blank" data-platform="YouTube Music">
-                <img src="https://img.icons8.com/color/48/youtube-music.png" alt="YouTube Music icon">
-                YouTube Music
-            </a>
-            <a href="https://lin.ee/tAaaty5" class="btn line-music" target="_blank" data-platform="LINE MUSIC">
-                <img src="https://img.icons8.com/color/48/line-music.png" alt="LINE MUSIC icon">
+                <img src="line-music-logo.png" alt="LINE MUSIC icon" class="custom-logo"> 
                 LINE MUSIC
             </a>
             <a href="https://amazon.co.jp/music/player/tracks/B0F93FWC4G?marketplaceId=A1VC38T7YXB528&musicTerritory=JP&ref=dm_sh_DxamNXlYOFbZuxtFtDxgscpTk" class="btn amazon-music" target="_blank" data-platform="Amazon Music">
